--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "html-react-parser": "^5.0.6",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
