--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.7.1",
     "react-query": "^3.39.3",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "sass": "^1.64.2",
     "typewriter-effect": "^2.19.0"
   },
